--- a/NamesList.html
+++ b/NamesList.html
@@ -28,7 +28,7 @@
     <tbody>
       <tr>
         <td valign="top" width="144">Revision</td>
-        <td valign="top">7.0.0</td>
+        <td valign="top">8.0.0</td>
       </tr>
       <tr>
         <td valign="top" width="144">Authors</td>
@@ -36,19 +36,19 @@
       </tr>
       <tr>
         <td valign="top" width="144">Date</td>
-        <td valign="top">2014-05-27</td>
+        <td valign="top">2015-02-18</td>
       </tr>
       <tr>
         <td valign="top" width="144">This Version</td>
         <td valign="top">
-		<a href="http://www.unicode.org/Public/7.0.0/ucd/NamesList.html">
-		http://www.unicode.org/Public/7.0.0/ucd/NamesList.html</a></td>
+		<a href="http://www.unicode.org/Public/8.0.0/ucd/NamesList.html">
+		http://www.unicode.org/Public/8.0.0/ucd/NamesList.html</a></td>
       </tr>
       <tr>
         <td valign="top" width="144">Previous Version</td>
         <td valign="top">
-		<a href="http://www.unicode.org/Public/6.3.0/ucd/NamesList.html">
-		http://www.unicode.org/Public/6.3.0/ucd/NamesList.html</a></td>
+		<a href="http://www.unicode.org/Public/7.0.0/ucd/NamesList.html">
+		http://www.unicode.org/Public/7.0.0/ucd/NamesList.html</a></td>
       </tr>
       <tr>
         <td valign="top" width="144">Latest Version</td>
@@ -491,6 +491,10 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
        <li>The final LF in the file must be present.</li>
 </ul>
   <h2>Modifications</h2>
+  <p><b>Version 8.0.0</b></p>
+        <ul>
+        <li>Reissued for Unicode 8.0.0.</li>
+        </ul>
   <p><b>Version 7.0.0</b></p>
         <ul>
         <li>Reissued for Unicode 7.0.0.</li>
