--- a/StandardizedVariants.html
+++ b/StandardizedVariants.html
@@ -27,7 +27,7 @@
   <table class="wide">
     <tbody><tr>
       <td valign="top" width="144">Revision</td>
-      <td valign="top">7.0.0</td>
+      <td valign="top">8.0.0</td>
     </tr>
     <tr>
       <td valign="top" width="144">Authors</td>
@@ -35,17 +35,17 @@
     </tr>
     <tr>
       <td valign="top" width="144">Date</td>
-      <td valign="top">2013-11-27, 09:54:53 GMT</td>
+      <td valign="top">2015-02-13, 13:30:35 GMT</td>
     </tr>
     <tr>
       <td valign="top" width="144">This Version</td>
-      <td valign="top"><a href="http://www.unicode.org/Public/7.0.0/ucd/StandardizedVariants.html">
-      http://www.unicode.org/Public/7.0.0/ucd/StandardizedVariants.html</a></td>
+      <td valign="top"><a href="http://www.unicode.org/Public/8.0.0/ucd/StandardizedVariants.html">
+      http://www.unicode.org/Public/8.0.0/ucd/StandardizedVariants.html</a></td>
     </tr>
     <tr>
       <td valign="top" width="144">Previous Version</td>
-      <td valign="top"><a href="http://www.unicode.org/Public/6.3.0/ucd/StandardizedVariants.html">
-		http://www.unicode.org/Public/6.3.0/ucd/StandardizedVariants.html</a></td>
+      <td valign="top"><a href="http://www.unicode.org/Public/7.0.0/ucd/StandardizedVariants.html">
+		http://www.unicode.org/Public/7.0.0/ucd/StandardizedVariants.html</a></td>
     </tr>
     <tr>
       <td valign="top" width="144">Latest Version</td>
@@ -237,6 +237,31 @@ the variation selector.</p><p>The mathematical variants are all produced with th
 <td></td>
 <td><img alt='U+A868+U+FE00/' src='http://www.unicode.org/cgi-bin/varglyph?24-A868-FE00'></td>
 <td>PHAGS-PA SUBJOINED LETTER YA  phags-pa letter reversed shaping subjoined ya</td>
+</tr><tr><td><img alt='U+10AC5' src='http://www.unicode.org/cgi-bin/refglyph?24-10AC5'></td>
+<td>10AC5 FE00</td>
+<td>isolate</td>
+<td><img alt='U+10AC5+U+FE00/isolate' src='http://www.unicode.org/cgi-bin/varglyph?24-10AC5-FE00-isol'></td>
+<td>MANICHAEAN LETTER DALETH  alternate form</td>
+</tr><tr><td><img alt='U+10AC6' src='http://www.unicode.org/cgi-bin/refglyph?24-10AC6'></td>
+<td>10AC6 FE00</td>
+<td>isolate</td>
+<td><img alt='U+10AC6+U+FE00/isolate' src='http://www.unicode.org/cgi-bin/varglyph?24-10AC6-FE00-isol'></td>
+<td>MANICHAEAN LETTER HE  alternate form</td>
+</tr><tr><td><img alt='U+10AD6' src='http://www.unicode.org/cgi-bin/refglyph?24-10AD6'></td>
+<td>10AD6 FE00</td>
+<td>isolate<br>final</td>
+<td><img alt='U+10AD6+U+FE00/isolate' src='http://www.unicode.org/cgi-bin/varglyph?24-10AD6-FE00-isol'> <img alt='U+10AD6+U+FE00/final' src='http://www.unicode.org/cgi-bin/varglyph?24-10AD6-FE00-fina'></td>
+<td>MANICHAEAN LETTER MEM  alternate form</td>
+</tr><tr><td><img alt='U+10AD7' src='http://www.unicode.org/cgi-bin/refglyph?24-10AD7'></td>
+<td>10AD7 FE00</td>
+<td>isolate</td>
+<td><img alt='U+10AD7+U+FE00/isolate' src='http://www.unicode.org/cgi-bin/varglyph?24-10AD7-FE00-isol'></td>
+<td>MANICHAEAN LETTER NUN  alternate form</td>
+</tr><tr><td><img alt='U+10AE1' src='http://www.unicode.org/cgi-bin/refglyph?24-10AE1'></td>
+<td>10AE1 FE00</td>
+<td>isolate</td>
+<td><img alt='U+10AE1+U+FE00/isolate' src='http://www.unicode.org/cgi-bin/varglyph?24-10AE1-FE00-isol'></td>
+<td>MANICHAEAN LETTER RESH  alternate form</td>
 </tr><tr><td><img alt='U+1820' src='http://www.unicode.org/cgi-bin/refglyph?24-1820'></td>
 <td>1820 180B</td>
 <td>isolate<br>medial<br>final</td>
@@ -667,6 +692,26 @@ the variation selector.</p><p>The mathematical variants are all produced with th
 <td></td>
 <td><img alt='U+0039+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-0039-FE0F'></td>
 <td>DIGIT NINE  emoji style</td>
+</tr><tr><td><img alt='U+00A9' src='http://www.unicode.org/cgi-bin/refglyph?24-00A9'></td>
+<td>00A9 FE0E</td>
+<td></td>
+<td><img alt='U+00A9+U+FE0E/' src='http://www.unicode.org/cgi-bin/varglyph?24-00A9-FE0E'></td>
+<td>COPYRIGHT SIGN  text style</td>
+</tr><tr><td><img alt='U+00A9' src='http://www.unicode.org/cgi-bin/refglyph?24-00A9'></td>
+<td>00A9 FE0F</td>
+<td></td>
+<td><img alt='U+00A9+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-00A9-FE0F'></td>
+<td>COPYRIGHT SIGN  emoji style</td>
+</tr><tr><td><img alt='U+00AE' src='http://www.unicode.org/cgi-bin/refglyph?24-00AE'></td>
+<td>00AE FE0E</td>
+<td></td>
+<td><img alt='U+00AE+U+FE0E/' src='http://www.unicode.org/cgi-bin/varglyph?24-00AE-FE0E'></td>
+<td>REGISTERED SIGN  text style</td>
+</tr><tr><td><img alt='U+00AE' src='http://www.unicode.org/cgi-bin/refglyph?24-00AE'></td>
+<td>00AE FE0F</td>
+<td></td>
+<td><img alt='U+00AE+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-00AE-FE0F'></td>
+<td>REGISTERED SIGN  emoji style</td>
 </tr><tr><td><img alt='U+203C' src='http://www.unicode.org/cgi-bin/refglyph?24-203C'></td>
 <td>203C FE0E</td>
 <td></td>
@@ -687,6 +732,16 @@ the variation selector.</p><p>The mathematical variants are all produced with th
 <td></td>
 <td><img alt='U+2049+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-2049-FE0F'></td>
 <td>EXCLAMATION QUESTION MARK  emoji style</td>
+</tr><tr><td><img alt='U+2122' src='http://www.unicode.org/cgi-bin/refglyph?24-2122'></td>
+<td>2122 FE0E</td>
+<td></td>
+<td><img alt='U+2122+U+FE0E/' src='http://www.unicode.org/cgi-bin/varglyph?24-2122-FE0E'></td>
+<td>TRADE MARK SIGN  text style</td>
+</tr><tr><td><img alt='U+2122' src='http://www.unicode.org/cgi-bin/refglyph?24-2122'></td>
+<td>2122 FE0F</td>
+<td></td>
+<td><img alt='U+2122+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-2122-FE0F'></td>
+<td>TRADE MARK SIGN  emoji style</td>
 </tr><tr><td><img alt='U+2139' src='http://www.unicode.org/cgi-bin/refglyph?24-2139'></td>
 <td>2139 FE0E</td>
 <td></td>
@@ -1557,6 +1612,16 @@ the variation selector.</p><p>The mathematical variants are all produced with th
 <td></td>
 <td><img alt='U+2B55+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-2B55-FE0F'></td>
 <td>HEAVY LARGE CIRCLE  emoji style</td>
+</tr><tr><td><img alt='U+3030' src='http://www.unicode.org/cgi-bin/refglyph?24-3030'></td>
+<td>3030 FE0E</td>
+<td></td>
+<td><img alt='U+3030+U+FE0E/' src='http://www.unicode.org/cgi-bin/varglyph?24-3030-FE0E'></td>
+<td>WAVY DASH  text style</td>
+</tr><tr><td><img alt='U+3030' src='http://www.unicode.org/cgi-bin/refglyph?24-3030'></td>
+<td>3030 FE0F</td>
+<td></td>
+<td><img alt='U+3030+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-3030-FE0F'></td>
+<td>WAVY DASH  emoji style</td>
 </tr><tr><td><img alt='U+303D' src='http://www.unicode.org/cgi-bin/varglyph?24-303D-FE0E'></td>
 <td>303D FE0E</td>
 <td></td>
@@ -1597,6 +1662,36 @@ the variation selector.</p><p>The mathematical variants are all produced with th
 <td></td>
 <td><img alt='U+1F004+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F004-FE0F'></td>
 <td>MAHJONG TILE RED DRAGON  emoji style</td>
+</tr><tr><td><img alt='U+1F170' src='http://www.unicode.org/cgi-bin/refglyph?24-1F170'></td>
+<td>1F170 FE0E</td>
+<td></td>
+<td><img alt='U+1F170+U+FE0E/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F170-FE0E'></td>
+<td>NEGATIVE SQUARED LATIN CAPITAL LETTER A  text style</td>
+</tr><tr><td><img alt='U+1F170' src='http://www.unicode.org/cgi-bin/refglyph?24-1F170'></td>
+<td>1F170 FE0F</td>
+<td></td>
+<td><img alt='U+1F170+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F170-FE0F'></td>
+<td>NEGATIVE SQUARED LATIN CAPITAL LETTER A  emoji style</td>
+</tr><tr><td><img alt='U+1F171' src='http://www.unicode.org/cgi-bin/refglyph?24-1F171'></td>
+<td>1F171 FE0E</td>
+<td></td>
+<td><img alt='U+1F171+U+FE0E/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F171-FE0E'></td>
+<td>NEGATIVE SQUARED LATIN CAPITAL LETTER B  text style</td>
+</tr><tr><td><img alt='U+1F171' src='http://www.unicode.org/cgi-bin/refglyph?24-1F171'></td>
+<td>1F171 FE0F</td>
+<td></td>
+<td><img alt='U+1F171+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F171-FE0F'></td>
+<td>NEGATIVE SQUARED LATIN CAPITAL LETTER B  emoji style</td>
+</tr><tr><td><img alt='U+1F17E' src='http://www.unicode.org/cgi-bin/refglyph?24-1F17E'></td>
+<td>1F17E FE0E</td>
+<td></td>
+<td><img alt='U+1F17E+U+FE0E/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F17E-FE0E'></td>
+<td>NEGATIVE SQUARED LATIN CAPITAL LETTER O  text style</td>
+</tr><tr><td><img alt='U+1F17E' src='http://www.unicode.org/cgi-bin/refglyph?24-1F17E'></td>
+<td>1F17E FE0F</td>
+<td></td>
+<td><img alt='U+1F17E+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F17E-FE0F'></td>
+<td>NEGATIVE SQUARED LATIN CAPITAL LETTER O  emoji style</td>
 </tr><tr><td><img alt='U+1F17F' src='http://www.unicode.org/cgi-bin/varglyph?24-1F17F-FE0E'></td>
 <td>1F17F FE0E</td>
 <td></td>
@@ -1607,6 +1702,16 @@ the variation selector.</p><p>The mathematical variants are all produced with th
 <td></td>
 <td><img alt='U+1F17F+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F17F-FE0F'></td>
 <td>NEGATIVE SQUARED LATIN CAPITAL LETTER P  emoji style</td>
+</tr><tr><td><img alt='U+1F202' src='http://www.unicode.org/cgi-bin/refglyph?24-1F202'></td>
+<td>1F202 FE0E</td>
+<td></td>
+<td><img alt='U+1F202+U+FE0E/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F202-FE0E'></td>
+<td>SQUARED KATAKANA SA  text style</td>
+</tr><tr><td><img alt='U+1F202' src='http://www.unicode.org/cgi-bin/refglyph?24-1F202'></td>
+<td>1F202 FE0F</td>
+<td></td>
+<td><img alt='U+1F202+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F202-FE0F'></td>
+<td>SQUARED KATAKANA SA  emoji style</td>
 </tr><tr><td><img alt='U+1F21A' src='http://www.unicode.org/cgi-bin/varglyph?24-1F21A-FE0E'></td>
 <td>1F21A FE0E</td>
 <td></td>
@@ -1627,6 +1732,16 @@ the variation selector.</p><p>The mathematical variants are all produced with th
 <td></td>
 <td><img alt='U+1F22F+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F22F-FE0F'></td>
 <td>SQUARED CJK UNIFIED IDEOGRAPH-6307  emoji style</td>
+</tr><tr><td><img alt='U+1F237' src='http://www.unicode.org/cgi-bin/refglyph?24-1F237'></td>
+<td>1F237 FE0E</td>
+<td></td>
+<td><img alt='U+1F237+U+FE0E/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F237-FE0E'></td>
+<td>SQUARED CJK UNIFIED IDEOGRAPH-6708  text style</td>
+</tr><tr><td><img alt='U+1F237' src='http://www.unicode.org/cgi-bin/refglyph?24-1F237'></td>
+<td>1F237 FE0F</td>
+<td></td>
+<td><img alt='U+1F237+U+FE0F/' src='http://www.unicode.org/cgi-bin/varglyph?24-1F237-FE0F'></td>
+<td>SQUARED CJK UNIFIED IDEOGRAPH-6708  emoji style</td>
 </tr></table>
   <hr width="50%">
   <div align="center">
