--- a/NamesList.html
+++ b/NamesList.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="en-us">
 <title>UCD: Unicode NamesList File Format</title>
-<link rel="stylesheet" type="text/css" href="http://www.unicode.org/reports/reports.css">
+<link rel="stylesheet" type="text/css" href="http://www.unicode.org/reports/reports-v2.css">
 </head>
 
 <body bgcolor="#ffffff">
@@ -24,7 +24,7 @@
 </table>
 <div class="body">
   <h1>Unicode NamesList File Format</h1>   
-  <table class="wide">
+  <table class="simple" width="90%">
     <tbody>
       <tr>
         <td valign="top" width="144">Revision</td>
@@ -36,7 +36,7 @@
       </tr>
       <tr>
         <td valign="top" width="144">Date</td>
-        <td valign="top">2015-02-18</td>
+        <td valign="top">2015-06-15</td>
       </tr>
       <tr>
         <td valign="top" width="144">This Version</td>
@@ -69,7 +69,7 @@
   </blockquote>
   <hr width="50%">
 
-<h2><a name="Introduction" id="Introduction"></a>1.0 Introduction</h2>
+<h2>1.0 <a name="Introduction" href="#Introduction">Introduction</a></h2>
 
 <p>The Unicode name list file NamesList.txt (also NamesList.lst) is a plain
 text file used to drive the layout of the character code charts in the Unicode
@@ -102,7 +102,7 @@ proposed characters.</p>
 	Charts in the <a href="http://www.unicode.org/versions/latest">Unicode 
 	Standard</a>.</p> 
 
-<h3><a name="Overview"></a>1.1 NamesList File Overview</h3>
+<h3>1.1 <a name="Overview" href="#Overview">NamesList File Overview</a></h3>
 
 <p>The NamesList files are plain text files which in their most simple form look 
 like this:</p>
@@ -125,7 +125,7 @@ their constituent syntax elements are needed.</p>
 
 <p>The full syntax with all the options is provided in the following sections.</p>
 
-<h2><a name="FileStructure"></a>2.0 NamesList File Structure</h2>
+<h2>2.0 <a name="FileStructure" href="#FileStructure">NamesList File Structure</a></h2>
 
 <p>This section defines the overall file structure</p>
 
@@ -212,40 +212,44 @@ CHAR_ENTRY:   NAME_LINE | RESERVED_LINE
   file format, do not occur in final published versions of the NamesList.</p>
 
 <h4>Blocks followed by Summaries</h4>
-<p>A block may be extended by a summary of standard variation sequences or selected alternate glyphs defined for characters in the block:</p>
-<pre><strong>SUMMARY:   ALTGLYPH_SUMMARY
+<p>A block may be extended by a summary of standard variation sequences or selected alternate glyphs (or both) defined for characters in the block:</p>
+<pre><strong>
+SUMMARY:   ALTGLYPH_SUMMARY
 		| VARIATION SUMMARY
 		| ALTGLYPH_SUMMARY VARIATION_SUMMARY
+		| MIXED_SUMMARY
 
-ALTGLYPH_SUMMARY:   ALTGLYPH_SUBHEAD
-		| ALTGLYPH_SUMMARY SUBHEAD
-		| ALTGLYPH_SUMMARY NOTICE_LINE
-		| ALTGLYPH_SUMMARY FILE_COMMENT
-		| ALTGLYPH_SUMMARY EMPTY_LINE
+ALTGLYPH_SUMMARY:   ALTGLYPH_SUBHEADER
+		| ALTGLYPH_SUMMARY SUMMARY_LINE
 
-VARIATION_SUMMARY:   VARIATION_SUBHEAD
-		| VARIATION_SUMMARY SUBHEAD
-		| VARIATION_SUMMARY NOTICE_LINE
-		| VARIATION_SUMMARY FILE_COMMENT
-		| VARIATION_SUMMARY EMPTY_LINE</strong>
+VARIATION_SUMMARY:   VARIATION_SUBHEADER
+		| VARIATION_SUMMARY SUMMARY_LINE
+				
+MIXED_SUMMARY:   MIXED_SUBHEADER
+		| MIXED_SUMMARY SUMMARY_LINE
+
+SUMMARY_LINE:   SUBHEADER
+		| NOTICE_LINE
+		| FILE_COMMENT
+		| EMPTY_LINE</strong>
 </pre>
 
-<p>When formatted for display, each summary will recap the information presented in the VARIATION_LINE elements 
-of the preceding block, grouped by alternate glyph variants and standardized variation sequences, and 
-preceded by the corresponding subhead. Additional SUBHEAD and NOTICE lines, if provided, immediately 
-follow the ALTGLYPH_SUBHEAD or VARIATION_SUBHEAD. There is no provision to provide subheads that are 
+<p>When formatted for display, each summary will recap the information presented in the VARIATION_LINE elements
+of the preceding block, grouped by alternate glyph variants and standardized variation sequences, and
+preceded by the corresponding subheader. Additional SUBHEADER and NOTICE lines, if provided, immediately
+follow the ALTGLYPH_SUBHEADER, VARIATION_SUBHEADER or MIXED_SUBHEADER. There is no provision to provide subheaders that are
 interspersed between items in the summary.</p>
 
-<p>These syntax constructs are entirely optional. If the ALTGLYPH_SUBHEAD or VARIATION_SUBHEAD are 
+<p>These syntax constructs are entirely optional. If the ALTGLYPH_SUBHEADER or VARIATION_SUBHEADER are 
 omitted from the names list, but the preceding block nevertheless contains VARIATION_LINE elements 
 as described below, Unibook will automatically generate any required summaries using a default format for the headers.</p>
 
-<p>Thus, the main purpose for providing ALTGLYPH_SUBHEAD or VARIATION_SUBHEAD elements would be to 
+<p>Thus, the main purpose for providing ALTGLYPH_SUBHEADER or VARIATION_SUBHEADER elements would be to 
 provide specific contents for these summary titles as well as allow the ability to add additional 
-information via SUBHEAD and NOTICE elements. The final published version of the Unicode names list 
-is machine generated and will always explicitly provide any summary subheads.</p>
+information via SUBHEADER and NOTICE elements. The final published version of the Unicode names list 
+is machine generated and will always explicitly provide any summary subheaders.</p>
 
-<h3><a name="FileElements"></a>2.1 NamesList File Elements</h3>
+<h3>2.1 <a name="FileElements" href="#FileElements">NamesList File Elements</a></h3>
 
 <p>This section provides the details of the syntax for the individual elements.</p>
 
@@ -312,12 +316,11 @@ is machine generated and will always explicitly provide any summary subheads.</p
 			// Empty and ignored lines as well as 
 			// file comments are ignored
 
-<strong>IGNORED_LINE:	TAB &quot;;&quot; EXPAND_LINE</strong>
-			// Skip &#39;;&#39; character, ignore text
+<strong>IGNORED_LINE:	TAB &quot;;&quot; LINE</strong>
+			// Ignore LINE
 
 <strong>SIDEBAR_LINE: 	&quot;;;&quot; LINE</strong>
-			// Skip &#39;;;&#39; characters, output line
-			// as marginal note
+			// Output LINE as marginal note
 
 <strong>DECOMPOSITION:	TAB &quot;:&quot; SP EXPAND_LINE</strong>       
 			// Replace ':' by EQUIV, expand line into 
@@ -329,38 +332,60 @@ is machine generated and will always explicitly provide any summary subheads.</p
 			// check for balanced &lt; &gt;
 
 <strong>NOTICE_LINE:	&quot;@+&quot; TAB LINE</strong>       
-			// Skip '@+', output text as notice
+			// Output LINE as notice
 
 <strong>		| &quot;@+&quot; TAB * SP LINE</strong>   
-			// Skip '@', output text as notice
+			// Output LINE as notice
 			// &quot;*&quot; expands to a bullet character
 			// Notices following a character code apply to the
 			// character and are indented. Notices not following
 			// a character code apply to the page/block/column 
 			// and are italicized, but not indented
 
+<strong>TITLE:		&quot;@@@&quot; TAB LINE</strong>      
+			// Output LINE as text
+			// Title is used in page headers
+
 <strong>SUBTITLE:	&quot;@@@+&quot; TAB LINE</strong>      
-			// Skip &quot;@@@+&quot;, output text as subtitle
+			// Output LINE as subtitle
 
 <strong>SUBHEADER:	&quot;@&quot; TAB LINE</strong> 
-			// Skip '@', output line as text as column header
+			// Output LINE as column header
 
-<strong>VARIATION_SUBHEAD:
-		&quot;@~&quot; TAB LINE</strong>
-			// Skip '@', output line as text as column header
-
-<strong>		| &quot;@~&quot;</strong>
+<strong>VARIATION_SUBHEADER:</strong>	<strong>&quot;@~&quot; TAB LINE</strong>			
+			// Output LINE as column header (summary subheader)
+		<strong>| &quot;@~&quot;</strong>					
 			// Output a default standard variation sequences summary subheader
-
-<strong>ALTGLYPH_SUBHEAD:
-		&quot;@@~&quot; TAB LINE</strong>       
-			// Skip '@', output line as text as column header
-
-<strong>		| &quot;@@~&quot;</strong>
+		<strong>| &quot;@~&quot; TAB &quot;!&quot;</strong>		
+			// Suppress output of a default standard variant sequences summary subheader
+			// and disable display of summary
+		<strong>| &quot;@~&quot; TAB &quot;!&quot; VARSEL_LIST</strong>
+		<strong>| &quot;@~&quot; TAB &quot;!&quot; VARSEL_LIST LINE</strong>
+			// Output a standard summary subheader, using default or LINE respectively
+			// Suppress any std variation sequences using selectors from the list
+											
+<strong>ALTGLYPH_SUBHEADER:</strong>	<strong>&quot;@@~&quot; TAB LINE</strong>			
+			// Output LINE as column header (summary subheader)
+		<strong>| &quot;@@~&quot;</strong>				
 			// Output a default alternate glyph summary subheader
+		<strong>| &quot;@@~&quot; TAB &quot;!&quot;</strong>		
+			// Suppress output of a default alternate glyph summary subheader
+			// and disable display of summary
+
+<strong>MIXED_SUBHEADER:	</strong><strong>&quot;@@@~&quot; TAB LINE</strong>			
+			// Output LINE as column header (summary subheader)
+		<strong>| &quot;@@@~&quot;</strong>					
+			// Output a default combined variation and alternate glyph summary subheader
+		<strong>| &quot;@@@~&quot; TAB &quot;!&quot;</strong>			
+			// Suppress output of a default alternate glyph summary subheader
+			// and disable display of summary
+		<strong>| &quot;@@@~&quot; TAB &quot;!&quot; VARSEL_LIST</strong> 
+		<strong>| &quot;@@@~&quot; TAB &quot;!&quot; VARSEL_LIST LINE</strong>
+			// Output a combined summary subheader, using default or LINE respectively
+			// Suppress any std variation sequences using selectors from the list
 
 <strong>BLOCKHEADER:	&quot;@@&quot; TAB BLOCKSTART TAB BLOCKNAME TAB BLOCKEND LF</strong>
-			// Skip &quot;@@&quot;, cause a page break and optional
+			// Cause a page break and optional
 			// blank page, then output one or more charts
 			// followed by the list of character names. 
 			// Use BLOCKSTART and BLOCKEND to define
@@ -377,10 +402,6 @@ is machine generated and will always explicitly provide any summary subheads.</p
 <strong>BLOCKEND:	CHAR</strong>	// Last character position in block
 <strong>PAGEBREAK:	&quot;@@&quot;</strong>	// Insert a (column) break
 <strong>INDEX_TAB:	&quot;@@+&quot;</strong>	// Start a new index tab at latest BLOCKSTART
-
-<strong>TITLE:		&quot;@@@&quot; TAB LINE</strong>      
-			// Skip &quot;@@@&quot;, output line as text
-			// Title is used in page headers
 
 <strong>EXPAND_LINE:	{ESC_CHAR | CHAR | STRING | ESC +}+ LF</strong>
 			// Instances of CHAR (see Notes) are replaced by 
@@ -407,30 +428,33 @@ is machine generated and will always explicitly provide any summary subheads.</p
 		apostrophe and accented letters in character names. </li>
 <li>An empty alternative glyph summary subheader expression will result in default header &quot;Selected Alternative Glyphs&quot;</li>
 <li>An empty standard variation subheader expression will result in the default header &quot;Standardized Variation Sequences&quot;</li>
+<li> A VARSEL_LIST may only contain code points for standard variation selectors (including script specific ones)</li>
 <li>When displaying a VARIATION_LINE for alternate glyphs, the &quot;ALTn&quot; selector is not displayed. </li>
 <li>If a glyph is unavailable for the variant glyph in a VARIATION_LINE it is replaced by the glyph for LIGHT SCREEN.</li>
 	</ul>
 
 
-<h3><a name="FilePrimitives"></a>2.2 NamesList File Primitives</h3>
+<h3>2.2 <a name="FilePrimitives" href="#FilePrimitives">NamesList File Primitives</a></h3>
 
 <p>The following are the primitives and terminals for the NamesList syntax.</p>
 
-<pre><strong>LINE:		STRING LF
+<pre><strong>LINE</strong>:		<strong>STRING LF
 COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
 		| &quot;(&quot; LABEL &quot;)&quot; SP &quot;*&quot;
-		| &quot;*&quot;
-</strong>
+		| &quot;*&quot;</strong>
+
 <strong>NAME</strong>:	  	&lt;sequence of uppercase ASCII letters, digits, space and hyphen&gt; 
 <strong>LCNAME</strong>:		&lt;sequence of lowercase ASCII letters, digits space and hyphen&gt;
 		<strong>| LCNAME &quot;-&quot; CHAR</strong>
 
-<strong>LCTAG</strong>:		&lt;sequence of ASCII letters&gt;
-<strong>STRING</strong>:	  	&lt;sequence of Latin-1 characters, except controls&gt; 
-<strong>LABEL</strong>:	  	&lt;sequence of Latin-1 characters, except controls, &quot;(&quot; or &quot;)&quot;&gt; 
-<strong>VARSEL:</strong>		<strong>CHAR
+<strong>LCTAG</strong>:		&lt;sequence of lowercase ASCII letters&gt;
+<strong>STRING</strong>:	  	&lt;sequence of ASCII or Latin-1 characters, except controls&gt; 
+<strong>LABEL</strong>:	  	&lt;sequence of ASCII or Latin-1 characters, except controls, &quot;(&quot; or &quot;)&quot;&gt; 
+<strong>VARSEL</strong>:		<strong>CHAR
 		| ALT ( &quot;1&quot;|&quot;2&quot;|&quot;3&quot;|&quot;4&quot;|&quot;5&quot;|&quot;6&quot;|&quot;7&quot;|&quot;8&quot;|&quot;9&quot; )</strong>
-
+<strong>VARSEL_LIST</strong>:	<strong>&quot;{&quot; CHAR_LIST &quot;}&quot;</strong>
+<strong>CHAR_LIST</strong>:	<strong>CHAR
+		| CHAR_LIST SP CHAR</strong>
 <strong>CHAR</strong>:		<strong>X X X X</strong>
 		<strong>| X X X X X </strong>
 		<strong>| X X X X X X </strong>
@@ -490,10 +514,12 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
        handle such exceptions.</li>
        <li>The final LF in the file must be present.</li>
 </ul>
-  <h2>Modifications</h2>
+  <h2><a name="Modifications" href="#Modifications">Modifications</a></h2>
   <p><b>Version 8.0.0</b></p>
         <ul>
         <li>Reissued for Unicode 8.0.0.</li>
+  <li>Added MIXED_SUBHEADER, VARSEL_LIST, and CHAR_LIST to the syntax.</li>
+  <li>Tweaked BNF and notes for variation summaries.</li>
         </ul>
   <p><b>Version 7.0.0</b></p>
         <ul>
